JS:Sound, Click, Refresh

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <button class="replaybtn">
             <i class="fas fa-redo-alt"></i>
         </button>
-        <span class="pop-up__message">REPLAY?</span>
+        <span class="pop-up__message">text</span>
     </section>
 </body>
 </html>
